--- a/h5/myCode.html
+++ b/h5/myCode.html
@@ -15,7 +15,7 @@
 		<div class="fixed-bg"></div>
 		<div class="perfectCode myCode">
 			<div>个人二维码：<span>分享二维码发展属于个人的二级分销商</span></div>
-			<img src="images/code.png" alt="" />
+			<img src="http://yichuanglian.huimor.com/index/createTwoCode" alt="" />
 		</div>
 		<div class="m-img-tip"><img src="images/3-3cabcun.png" alt="" /></div>
 		<div class="myCode-btn"><button>发展二级分销商</button></div>
