--- a/h5/myRelease.html
+++ b/h5/myRelease.html
@@ -122,12 +122,12 @@
 			        			if(!isNaN(data[i].budget)){
 			        				data[i].budget = '￥'+data[i].budget
 			        			}
-			        			data[i].cate_name = data[i].cate_name.join(',');
+			        			data[i].cate_name = data[i].cate_name.join(', ');
 			        			data[i].addtime = data[i].addtime.slice(0,-3); //格式化日期
 		        				str+='<div class="list" data-id="'+data[i].id+'" onclick="jumpPage('+data[i].id+','+status+')">\
 										<div><span>'+data[i].projectname+'</span><span class="fr">'+data[i].addtime+'</span></div>\
 										<div><span>行业：</span>'+data[i].cate_name+'</div>\
-										<div><span>项目预算：</span><strong>￥'+data[i].budget+'</strong></div>\
+										<div><span>项目预算：</span><strong>'+data[i].budget+'</strong></div>\
 										<div><span>期望提成比例：</span><em>'+data[i].proportion+'%</em></div>\
 									</div>';
 		        			}
