--- a/h5/buttJointSuccess.html
+++ b/h5/buttJointSuccess.html
@@ -147,7 +147,7 @@
 		        			proportion_money:data.proportion_money,
 		        			Commission_money:data.Commission_money,
 		        			wxname:docker.wxname,
-		        			avator:docker.avator,
+		        			avator:docker.wximage,
 		        		}
 		        		createDetailsStatus(detailData);
 		        		createCluesHtml(clues);
