--- a/h5/myCode.html
+++ b/h5/myCode.html
@@ -18,10 +18,10 @@
 			<img src="http://yichuanglian.huimor.com/index/createTwoCode" alt="" />
 		</div>
 		<div class="m-img-tip"><img src="images/3-3cabcun.png" alt="" /></div>
-		<div class="myCode-btn"><button>发展二级分销商</button></div>
+		<div class="myCode-btn" id="shareBtn"><button>发展二级分销商</button></div>
 	</body>
 	<script type="text/javascript">
-
+		
 		function fenxiang() {
 			$('#myCode-btn').click(function(){
 				wx.ready(function(){
@@ -107,5 +107,7 @@
 	    		}
 	        }
 	    });
+
+	    
 	</script>
 </html>
