--- a/h5/myCode.html
+++ b/h5/myCode.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script src="js/jquery.1.11.3.min.js"></script>
-	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/common.js?t=12313312" type="text/javascript" charset="utf-8"></script>
 	
 </head>
 	<body>
