--- a/h5/myCode.html
+++ b/h5/myCode.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>我的二维码</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css?t=122"/>
 	<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script src="js/jquery.1.11.3.min.js"></script>
-	<script src="js/common.js?t=12313312" type="text/javascript" charset="utf-8"></script>
+	<script src="js/common.js?t=235211111" type="text/javascript" charset="utf-8"></script>
 	
 </head>
 	<body>
@@ -33,27 +33,24 @@
 				withCredentials:true  
 			},  
 	        success:function(data){
-	        	try{
-		        	var appId  = data.data.appId;
-		        	var nonceStr  = data.data.nonceStr;
-		        	var timestamp  = data.data.timestamp;
-		        	var signature  = data.data.signature;
+	        	var appId  = data.data.appId;
+	        	var nonceStr  = data.data.nonceStr;
+	        	var timestamp  = data.data.timestamp;
+	        	var signature  = data.data.signature;
 
-		    		wx.config({
-					    debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-					    appId: appId, // 必填，公众号的唯一标识     
-					　　timestamp: timestamp, // 必填，生成签名的时间戳
-					    nonceStr: nonceStr, // 必填，生成签名的随机串
-					    signature: signature,// 必填，签名，见附录1
-					    jsApiList: [
-					    	'onMenuShareTimeline',
-					    	'onMenuShareAppMessage',
-					    	'onMenuShareQQ'
-				    	] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
-					});
-	    		}catch(e){
-	    			alert(e)
-	    		}
+	    		wx.config({
+				    debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+				    appId: appId, // 必填，公众号的唯一标识     
+				　　timestamp: timestamp, // 必填，生成签名的时间戳
+				    nonceStr: nonceStr, // 必填，生成签名的随机串
+				    signature: signature,// 必填，签名，见附录1
+				    jsApiList: [
+				    	'onMenuShareTimeline',
+				    	'onMenuShareAppMessage',
+				    	'onMenuShareQQ'
+			    	] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+				});
+	    		$.shareAction();
 	        }
 	    });
 
