--- a/h5/index.html
+++ b/h5/index.html
@@ -7,7 +7,7 @@
 	<title>易创链</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
-	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/common.js?a=11" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		
