--- a/h5/myCode.html
+++ b/h5/myCode.html
@@ -8,20 +8,20 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css?t=122"/>
 	<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script src="js/jquery.1.11.3.min.js"></script>
-	<script src="js/common.js?t=235211111" type="text/javascript" charset="utf-8"></script>
+	<script src="js/common.js?t=23521" type="text/javascript" charset="utf-8"></script>
 	
 </head>
 	<body>
 		<div class="fixed-bg"></div>
 		<div class="perfectCode myCode">
 			<div>个人二维码：<span>分享二维码发展属于个人的二级分销商</span></div>
-			<img src="http://yichuanglian.huimor.com/index/createTwoCode" alt="" />
+			<img id="erwei" src="http://yichuanglian.huimor.com/index/createTwoCode" alt="" />
 		</div>
 		<div class="m-img-tip"><img src="images/3-3cabcun.png" alt="" /></div>
 		<div class="myCode-btn" id="shareBtn"><button>发展二级分销商</button></div>
 	</body>
 	<script type="text/javascript">
-
+		
 		$.ajax({
 	        url: 'http://yichuanglian.huimor.com/index/development',
 	        type:'get',
@@ -36,7 +36,10 @@
 	        	var appId  = data.data.appId;
 	        	var nonceStr  = data.data.nonceStr;
 	        	var timestamp  = data.data.timestamp;
-	        	var signature  = data.data.signature;
+	        	var signature  = data.data.signature;	
+	        	var uid = data.data.userid;
+
+	        	localStorage.setItem("uid",uid);
 
 	    		wx.config({
 				    debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
@@ -47,7 +50,9 @@
 				    jsApiList: [
 				    	'onMenuShareTimeline',
 				    	'onMenuShareAppMessage',
-				    	'onMenuShareQQ'
+				    	'onMenuShareQQ',
+				    	'onMenuShareWeibo',
+				    	'onMenuShareQZone'
 			    	] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
 				});
 	    		$.shareAction();
