--- a/h5/successEnter.html
+++ b/h5/successEnter.html
@@ -14,7 +14,10 @@
 		<div class="tipShow">
 			<img src="images/1-4rzcgong.png"/>
 			<p>恭喜您成功入驻易创互联平台</p>
-			<div class="btn"><a href="cluesRelease.html">立即发布线索</a><a href="myCode.html">发展二级分销商</a></div>
+			<div class="btn"><a href="cluesRelease.html">立即发布线索</a><a href="javascript:;" id="shareBtn">发展二级分销商</a></div>
 		</div>
 	</body>
+	<script type="text/javascript">
+		$.developSecondSales(); //发展二级分销微信配置
+	</script>
 </html>
