--- a/h5/successRelease.html
+++ b/h5/successRelease.html
@@ -30,9 +30,10 @@
 				</dl>
 			</div>
 			<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
-			<div class="btn"><a href="">确定</a><a href="myCode.html">发展二级分销商</a></div>
+			<div class="btn"><a href="myRelease.html">确定</a><a href="javascript:;" class="shareBtn">发展二级分销商</a></div>
 		</div>
 		<script type="text/javascript">
+			$.developSecondSales(); //发展二级分销微信配置
 			$.ajax({
 		        url: 'http://yichuanglian.huimor.com/index/dockerMessage',
 		        type:'post',
