--- a/h5/share.html
+++ b/h5/share.html
@@ -7,7 +7,7 @@
 	<title>易创链-分享</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
-	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/common.js?t=1" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		
@@ -48,10 +48,32 @@
 				</div>
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
-			<div class="m-code"><img src="images/code.png" alt="" /></div>
+			<div class="m-code" id="erwei"><img src="images/code.png" alt="" /></div>
 			<div class="m-img-tip"><img src="images/4-4casbie.png"/></div>
 		</div>
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript">
+		var uid = GetQueryString('uid');
+		$.ajax({
+	        url: 'http://yichuanglian.huimor.com/index/getQrCode',
+	        type:'get',
+	        dataType:'json',
+	        data:{
+	        	uid:uid
+	        },
+	        xhrFields:{  
+				withCredentials:true  
+			},  
+			success:function(data){
+				var erwei = $('#erwei');
+				if(data.code==1){
+	        		var qrcode  = data.data.qrcode;
+	        		alert(erwei.attr('src'))
+	        	}
+	        	
+	        }
+	    });
+	</script>
 	</body>
 </html>
