--- a/h5/share.html
+++ b/h5/share.html
@@ -69,7 +69,7 @@
 				var erwei = $('#erwei');
 				if(data.code==1){
 	        		var qrcode  = data.data.qrcode;
-	        		alert(erwei.attr('src'))
+	        		erwei.attr('src',qrcode)
 	        	}
 	        	
 	        }
