--- a/h5/share.html
+++ b/h5/share.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
-			<div class="m-code" id="erwei"><img src="images/code.png" alt="" /></div>
+			<div class="m-code" ><img id="erwei" src="images/code.png" alt="" /></div>
 			<div class="m-img-tip"><img src="images/4-4casbie.png"/></div>
 		</div>
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
