--- a/h5/forgetPwd.html
+++ b/h5/forgetPwd.html
@@ -95,7 +95,7 @@
 					return false;
 				}
 				$.ajax({
-			        url: '://yichuanglian.huimor.com/index/forgetpwd',
+			        url: 'http://yichuanglian.huimor.com/index/forgetpwd',
 			        type:'post',
 			        data:{
 			        	mobile:tel,
