--- a/h5/myAccount.html
+++ b/h5/myAccount.html
@@ -29,12 +29,12 @@
 		        success:function(data){
 		        	if(data.code==1){
 		        		var data = data.data.pop();
-		        		var total_money = data.total_money;
-		        		var notpay_money = data.notpay_money;
-		        		var income_money = data.income_money;
-		        		$('#totalMoney').text('￥'+total_money);
-		        		$('#incomeMoney').text('￥'+income_money);
-		        		$('#notpayMoney').text('￥'+ notpay_money);
+		        		var total_money = data.total_money ? '￥'+parseFloat(data.total_money).toFixed(2) : '0.00';
+		        		var notpay_money = data.notpay_money ? '￥'+parseFloat(data.notpay_money).toFixed(2) : '0.00';
+		        		var income_money = data.income_money ? '￥'+parseFloat(data.income_money).toFixed(2) : '0.00';
+		        		$('#totalMoney').text(total_money);
+		        		$('#incomeMoney').text(income_money);
+		        		$('#notpayMoney').text(notpay_money);
 
 		        	}else{
         		      	$.toastTip({
