--- a/h5/systemMessages.html
+++ b/h5/systemMessages.html
@@ -11,8 +11,8 @@
 	</head>
 	<body>
 		<div class="fixed-bg"></div>
-		<div class="messages">
-			<div class="messagesDate">2016-12-21 15:30</div>
+		<div class="messages" id="mesBox">
+			<!-- <div class="messagesDate">2016-12-21 15:30</div>
 			<div class="messagesList">
 				<h3 class="successMes">对接成功</h3>
 				<p>恭喜您！您发布的《项目名称》线索对接成功~</p>
@@ -25,7 +25,50 @@
 			<div class="messagesList">
 				<h3>系统通知</h3>
 				<p>系统通知内容系统通知内容系统通知内容系统通知内容系统通知内容系统通知内容系统通知内容系统通知内容系统通知内容系统通知内容</p>
-			</div>
+			</div> -->
 		</div>
 	</body>
 </html>
+<script type="text/javascript">
+	function joinHtml(data){
+		var mesBox = $('#mesBox');
+		var html = "";
+		var status='';
+		
+		if(data.length){
+			mesBox.html('<h3 style="text-align:center">目前还没有系统消息</h3>');
+			return;
+		}
+		
+		$.each(data,function(index,item){
+			item.addtime = item.addtime ? item.addtime.slice(0,-3) :''; //格式化日期
+			status = item.content.indexOf("对接成功") > -1 ? "对接成功" :"对接失败";
+			html += [
+				'<div class="messagesDate">'+item.addtime+'</div>',
+				'<div class="messagesList">',
+					'<h3 class="successMes">'+status+'</h3>',
+					'<p>'+item.content+'</p>',
+				'</div>'
+			].join('');
+		})
+
+		mesBox.html(html);
+	}
+	$(function(){
+		$.ajax({
+	        url: 'http://yichuanglian.huimor.com/index/getSysMessage',
+	        type:'get',
+	        xhrFields:{  
+				withCredentials:true  
+			}, 
+	        dataType:'json',
+	        success:function(data){
+
+	        	if(data.code==1){
+	        		joinHtml(data.data);
+	        	}
+	  
+	        }
+	    });
+	})
+</script>
